# Pro-Computing-Team-33

./: .gitignore  Dbquery.py  Example Data BE(Hons).xlsx  Example Data BE(Hons)_output.xlsx  MajorEditWindow.py  README.md  UI_MajorEditWindowEdit.py  calculate.py  file_selector.py  handbook.py  main.py  pyproject.toml  read_excel.py  test_file_validity.py  window.py
app/TkinterGui/: main_window.py
app/gui/: TkinterApp.py
app/logic/: calculate.py  handbook.py
build_environment/: build_environment.md  build_environment_guidance.md  environment.yml  requirements.txt
databases/: sqlite_studentDB.py  studentDB.py
databases/tests/: test_studentDB.py
file_processing/: excel_file_reader.py  file_reader.py  read_excel.py
file_processing/tests/: test_file_reader.py
src/: handbook.db  main.py
src/app/TkinterGui/: main_window.py  major_edit_window.py  output_window.py
src/app/databases/: sqlite_handbookDB.py
src/app/icons/: cropped-uwa-crest-512.icns
src/app/logic/: handbook.py  marks_processor.py
test_files/: .~lock.Example of Desired Output.xlsx#  Example Data BE(Hons).xlsx  Example Data BEHons.xlsx  Example Desired Output.xlsx  Example of Desired Output.xlsx
tests/: test_file_validity.py
